# ChangeLog for games-action/chickens
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-action/chickens/ChangeLog,v 1.17 2011/08/07 17:07:41 armin76 Exp $

  07 Aug 2011; Raúl Porcel <armin76@gentoo.org> chickens-0.2.4.ebuild:
  Drop alpha keyword

  26 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> chickens-0.2.4.ebuild:
  Pin media-libs/allegro to old version.

  24 Jul 2009; Tristan Heaven <nyhm@gentoo.org> chickens-0.2.4.ebuild:
  Fix build error when bashdb is installed, bug #276794

  02 Apr 2009; Michael Sterrett <mr_bones_@gentoo.org>
  chickens-0.2.4.ebuild:
  configure isn't an autoconf script so don't try to treat it like one.

  29 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org>
  chickens-0.2.4.ebuild:
  EAPI=2; desktop entry (bug #159748)

  20 Sep 2006; <blubb@gentoo.org> chickens-0.2.4.ebuild:
  stable on amd64

  09 May 2006; Thomas Cort <tcort@gentoo.org> chickens-0.2.4.ebuild:
  Stable on alpha.

  12 Mar 2006; Michael Sterrett <mr_bones_@gentoo.org>
  chickens-0.2.4.ebuild:
  upstream has gone away (bug #125857)

  11 Mar 2006; Fernando J. Pereda <ferdy@gentoo.org> chickens-0.2.4.ebuild:
  Add ~alpha keyword as per bug #125760. Tested by Thomas Cort
  <tcort@cs.ubishops.ca>

  28 Jan 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  chickens-0.2.4.ebuild:
  Drop x11 dependencies as chickens doesn't actually depend on X directly.

  11 Aug 2005; Carlos Silva <r3pek@gentoo.org> chickens-0.2.4.ebuild:
  marked ~amd64. closes bug #102024

  07 Mar 2005; Michael Sterrett <mr_bones_@gentoo.org> chickens-0.2.4.ebuild:
  HOMEPAGE update

  08 Nov 2004; Joseph Jezak <josejx@gentoo.org> chickens-0.2.4.ebuild:
  Marked ppc stable.

  21 Jul 2004; Michael Sterrett <mr_bones_@gentoo.org> -chickens-0.2.0.ebuild:
  clean older ebuild

*chickens-0.2.4 (21 Jul 2004)

  21 Jul 2004; Michael Sterrett <mr_bones_@gentoo.org> +chickens-0.2.4.ebuild:
  version bump (bug #57742)
