@@ -1,14 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-DIST ChickensForLinux-Linux-0.2.4.tar.gz 1455207 RMD160 e7cf537e0bb43a1ecb4089b929093626fc78caf7 SHA1 c9bb8f4989dbde77c4085d0f6fa47ec50db6df83 SHA256 604dc614793b5bee2346639df14ab846cf878fed09ef695804d5aa21d85b518b
-EBUILD chickens-0.2.4.ebuild 1565 RMD160 cf91e181cc31c70a4f37a0b20cb450a9011f0ff9 SHA1 81e73e2685a14d6f9c2ca736ca20b1374829b825 SHA256 920fa4e12cd36bfeaddd45961c758680e00b11638532228f24539d45b1305a21
-MISC ChangeLog 2246 RMD160 836f2c94e64d6f6bffc9634b61ab49770e9c3c4e SHA1 b74d20444fa308197f91c4e417275f12dd73d760 SHA256 a734cefb119bb58724558912bc21bfdb78155cbf80c6227d4021b7d345d32c8f
-MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
+DIST ChickensForLinux-Linux-0.2.4.tar.gz 1455207 SHA256 604dc614793b5bee2346639df14ab846cf878fed09ef695804d5aa21d85b518b SHA512 d94a70818a766fde443e86184418990d789246c239da01c6c1a2c9e7d8c1d6bb52ed28efbb4ecdb6b079c585e1ba18bc8efcd4f1cbf718ff39757831265c7a78 WHIRLPOOL 2b1d7c088dac8d975eb7b45b138f6786ae6aaa6bcaf5be1554b80f8fa397560a43d209c0fe5fd0491531b1f1e41db1706482bab23c85f00f86482db0b3070947
+EBUILD chickens-0.2.4.ebuild 1638 SHA256 2ab762f65af92181d98ec237d857f60cba6a19913249a9c1dbbcbaddbdf7abbb SHA512 62823af730b29654a81e5c4c78404fdbf9ae49acd0a008266766d6a3cde29f93d96522de87e23c7a9f07894b075a2621a92da18f9e6a0501f855040924e2645c WHIRLPOOL 4fb478c69b6ab7767930e123d0252b67a1aae2eae5b08d58092ac42fe0050574e63f351b28aa2232f6fff4b2157a90fe00d38f77846c2a711d25306651b0dcc2
+MISC ChangeLog 2393 SHA256 3f60cdf0294145ae6b04ef2c1c09bd81e1c3c63c776c101e8d250664ee778c47 SHA512 c4ec09c017970bc587e41be41106c514f8b97f65c9c62468c00f1248d24971ae8bd5377fb375528989e8d25e43c121e09369687c0a73263c53990a4c6a64a186 WHIRLPOOL 6c30d1f6a4552e083309abc542a86621ccff89c1a6d9002e22d0c9059f9a12743a042525cd2627e46097bdebc4ddab8a54c7afbd81269bb7394269d78705eb4c
+MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEARECAAYFAk4+xmMACgkQuQc30/atMkBmMACgneWdCbtafvKjT484kRL4CHGE
-VU8AoKOCZ9GaiC7RdxxIu+nNNzqLQ4yP
-=mwOm
+iQGcBAEBCAAGBQJTW3gpAAoJEJQzkH1pP7W4gB4L/RndZOvlcSG+NjqiySuDURym
+jdbiGpUByU1yYvbm9swBHq5Q71CxkfF1+Yhynhk4nJI5Z+j+jqUFNEbadMVAJbVC
+ggjBTEMQWhqu5vMMs/18RYp8ViDAOhTCcoMgAhTUU5GDVyGuTMVqqbKCfDMg5rAD
+uK0P0tdMj2yUtyS7BaYwqQCys1nE43NgYj1EzhMUp99ojgy+XULhQxW+80/55yAw
+zr78Q57Wihb3qqY812dgc9GzgpYxrGEDHQw0NByZp6nQEg33anqvKhH1K1CUgEnH
+94swL73EvtkhyAL8GOl+EmjAZOq/SRy60w2x0S3frBQQpdLtE7Ue2fwiVDtZWqdk
+XE73BJqwSwUNjHDtlyhPYYzCLuYA6POOF8orxjQ6LgvDkIpY4Vx66+lS3eHu7hBr
+9hggY5V+KXWWQGJPLfCSpbu8668+ALbo8puhtrGHiMDDTOvGcGdKA3i3CZvaQej/
+R4ofeRZQbE5+eyvKS0qctUalFcwlRMX2kK0rUVtg2g==
+=dsCq
 -----END PGP SIGNATURE-----
