@@ -1,6 +1,9 @@
 # ChangeLog for games-action/chickens
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-action/chickens/ChangeLog,v 1.17 2011/08/07 17:07:41 armin76 Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-action/chickens/ChangeLog,v 1.18 2014/04/26 09:10:30 ulm Exp $
+
+  26 Apr 2014; Ulrich Müller <ulm@gentoo.org> chickens-0.2.4.ebuild:
+  Fix LICENSE, add mirror and bindist restrictions, update SRC_URI, bug 506790.
 
   07 Aug 2011; Raúl Porcel <armin76@gentoo.org> chickens-0.2.4.ebuild:
   Drop alpha keyword
